--- a/PiGu_ME.Rmd
+++ b/PiGu_ME.Rmd
@@ -41,7 +41,7 @@ CH_PG_day <- as.matrix(data_ME_day_wide %>% select(-c(year, site, burrow_name)),
 colnames(CH_PG_day) <- NULL
 #CH_PG_day <- round(CH_PG_day, 0)
 
-data_ME_day_small <- data_ME_day_wide[sample(nrow(data_ME_day_wide), 200), ]
+data_ME_day_small <- data_ME_day_wide[sample(nrow(data_ME_day_wide), 200),]
 
 CH_PG_day_small <- as.matrix(data_ME_day_small %>% select(-c(year, site, burrow_name)), rownames.force = F)
 colnames(CH_PG_day_small) <- NULL
@@ -92,8 +92,7 @@ for (i in 1:nind){
    for (t in 1:(n.occasions-1)){
       phiA[i,t] <- mean.phi[1]
       phiB[i,t] <- mean.phi[2]
-      psiAB[i,t] <- mean.psi[1]
-      psiBA[i,t] <- 0 #zero? removed?
+      psiAB[i,t] <- mean.psi
       pA[i,t] <- mean.p[1]
       pB[i,t] <- mean.p[2]
       b[i,t] <- mean.b
@@ -103,13 +102,13 @@ for (i in 1:nind){
 
 for (u in 1:2){
    mean.phi[u] ~ dunif(0, 1)    # Priors for mean state-spec. survival
-   mean.psi[u] ~ dunif(0, 1)    # Priors for mean transition
    mean.p[u] ~ dunif(0, 1)      # Priors for mean state-spec. recapture
 }
+mean.psi ~ dunif(0, 1)    # Priors for mean transition
 mean.b ~ dunif(0, 1)  # Prior for mean assignment error
 mean.pi ~ dunif(0, 1)
 
-# Define state-transition and observation matrices
+# Define transition and observation matrices
 for (i in 1:nind){
    for (t in f[i]:(n.occasions-1)){
       # Define state probability when an individual is marked
@@ -157,9 +156,9 @@ for (i in 1:nind){
    z[i,f[i]] ~ dcat(pj[i, f[i],])
    y[i,f[i]] ~ dcat(po1[z[i,f[i]], i, f[i], ])
    for (t in (f[i]+1):n.occasions){
-      # State process: draw S(t) given S(t-1)
+      # State process: S(t) given S(t-1)
       z[i,t] ~ dcat(ps[z[i,t-1], i, t-1,])
-      # Observation process: draw O(t) given S(t)
+      # Observation process: O(t) given S(t)
       y[i,t] ~ dcat(po[z[i,t], i, t-1,])
       } #t
    } #i
@@ -167,15 +166,19 @@ for (i in 1:nind){
 write.model(model_ME, "model_ME.txt")
 model.file = paste(getwd(),"model_ME.txt", sep="/")
 
-#ch <- CH_PG_day_small
+#ch <- CH_PG_day
 
 # Function to fill in known z state (reduce computation time)
 me.known.z <- function(ch) {
   known.z <- ch
-  for (i in 1:dim(ch)[1]) {
+  for (i in 1:dim(known.z)[1]) {
+    if (sum(known.z[i,] == 2) < 1) {  #If there aren't any prey deliveries, all NA
+       known.z[i,] <- NA
+     } else {
     known_first <- min(which(ch[i,] == 2)) #first prey delivery
     known_last <- max(which(ch[i,] == 2)) #last prey delivery
     known.z[i, known_first:known_last] <- 2 #all days between first and last represent known state 2
+     }
   }
   known.z[known.z == 1] <- NA  #unknown states when observations are bv or not seen
   known.z[known.z == 3] <- NA
@@ -184,15 +187,19 @@ me.known.z <- function(ch) {
 
 # Function to create initial values for unknown z; explained on pg 181-2 of BPA
 me.init.z <- function(ch){
-  dat <- ch
-   for (i in 1:dim(ch)[1]) {
+  inits <- ch
+   for (i in 1:dim(inits)[1]) { 
+     if (sum(inits[i,] == 2) < 1) {   #If no prey deliveries, all 1s or 3s
+       inits[i,] <- rep(3, dim(ch)[2])
+     } else {
     prey_first <- min(which(ch[i,] == 2)) #first prey delivery
     prey_last <- max(which(ch[i,] == 2)) #last prey delivery
-    dat[i, prey_first:prey_last] <- NA
-    dat[i, 1:(prey_first-1)] <- sample(1:2, prey_first-1, replace = T)
-    dat[i, (prey_last+1):(dim(ch)[2])] <- sample(2:3, dim(ch)[2]-prey_last, replace = T)
+    inits[i, prey_first:prey_last] <- NA
+    inits[i, 1:(prey_first-1)] <- sample(1:2, prey_first-1, replace = T)
+    inits[i, (prey_last+1):(dim(ch)[2])] <- sample(2:3, dim(ch)[2]-prey_last, replace = T)
+     }
       }
-   return(ch)
+   return(inits)
 }
 
 get.first <- function(x) min(which(x != 3))
@@ -202,16 +209,17 @@ f <- apply(CH_PG_day_small, 1, get.first)
 # last <- apply(CH_PG_day_small, 1, get.last)
 
 # Bundle data
-jags.data <- list(y = CH_PG_day_small, f = f, 
+jags.data <- list(y = CH_PG_day_small, 
+                  f = f, 
                   n.occasions = dim(CH_PG_day_small)[2], 
                   nind = dim(CH_PG_day_small)[1],
                   z = me.known.z(CH_PG_day_small))
 
 # Initial values - no mean.b?
 inits <- function(){list(mean.phi = runif(2, 0, 1),
-                         mean.psi = runif(2, 0, 1),
+                         #mean.psi = runif(2, 0, 1),
                          mean.p = runif(2, 0, 1),
-                         z = me.init.z(CH_PG_day_small, f))}
+                         z = me.init.z(CH_PG_day_small))}
  
 # Parameters
 parameters <- c("mean.phi", "mean.psi", "mean.p", "mean.b", "mean.pi")
